<resources>
    <string name="app_name">Odd Eve</string>
    <string name="home_page_interstitial_ad_unit_id">ca-app-pub-1375172801279152/6712970476</string>
    <string name="toss_screen_interstitial_ad_unit_id">ca-app-pub-1375172801279152/6712970476</string>
    <string name="game_over_interstitial_ad_unit_id">ca-app-pub-1375172801279152/7309836460</string>
    <string name="contactBtnValue">contact</string>
    <string name="contact_info">Contact me on(instagram) : mr.triggerd79</string>
    <string name="description">This game is developed by a class 10 student as a beginner project to enhance skills in Java, XML, and Android development. It is a fun and interactive game where you can play hand cricket against the computer. Enjoy the game and test your game skills!</string>
    <string name="description_title">Description:</string>
    <string name="devloped_by">Mr. Triggerd79</string>
    <string name="developed_by_title">Developed by:</string>
    <string name="version">Version 1.0</string>
    <string name="about_odd_even_game">About ODD EVEN Game</string>
    <string name="main_title">Odd Even</string>
    <string name="subtitle">A game of hands</string>
    <string name="play_btn_text">Play</string>
    <string name="secret_btn_text">secret</string>
    <string name="multiplayer_btn_text">multiplayer</string>
    <string name="balls_played_default_text">Balls played : 0</string>
    <string name="player_score_default_text">Player Score : 0</string>
    <string name="computer_score_default_text">Computer Score : 0</string>
    <string name="event_view_default_text">hello</string>
    <string name="btn1_default_text">1</string>
    <string name="btn2_default_text">2</string>
    <string name="btn3_default_text">3</string>
    <string name="btn4_default_text">4</string>
    <string name="btn5_default_text">5</string>
    <string name="btn6_default_text">6</string>
    <string name="btn7_default_text">7</string>
    <string name="btn8_default_text">8</string>
    <string name="btn9_default_text">9</string>
    <string name="btn10_default_text">10</string>
    <string name="restart">restart</string>
    <string name="next">Next</string>
    <string name="toss">Toss</string>
    <string name="batting">batting</string>
    <string name="bowling">bowling</string>
    <string name="odd">odd</string>
    <string name="even">even</string>
</resources>