<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secretActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_odd_even_game"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed_by_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
        android:id="@+id/instagramTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devloped_by"
        android:textSize="18sp"
        android:autoLink="web"
        android:linksClickable="true" />


        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp" />
        <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:textSize="20sp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contactBtnValue"
            tools:ignore="VisualLintButtonSize"
            android:background="@drawable/button_background"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>