<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tossActivity">

    <TextView
        android:id="@+id/Toss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toss"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/tossGameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toss"
        app:layout_constraintVertical_bias="0.43">

        <TextView
            android:id="@+id/tossEventView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:text="@string/event_view_default_text"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/btnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/battingBtn"
                    android:layout_width="120dp"
                    android:layout_height="88dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/batting"
                    android:contentDescription="@string/batting" />

                <ImageView
                    android:id="@+id/ballingBtn"
                    android:layout_width="138dp"
                    android:layout_height="88dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/balling"
                    android:contentDescription="@string/bowling" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/oddEvenbtnContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/oddBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/odd"
                    android:textColor="@color/dark_gray" />

                <Button
                    android:id="@+id/evenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/even"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playBtnContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btnContainer1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn1_default_text"
                        android:textColor="@color/dark_gray"/>

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn2_default_text"
                        android:textColor="@color/dark_gray"  />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn3_default_text"
                        android:textColor="@color/dark_gray"  />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn4_default_text"
                        android:textColor="@color/dark_gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnContainer2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn5_default_text"
                        android:textColor="@color/dark_gray"/>

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn6_default_text"
                        android:textColor="@color/dark_gray"  />

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn7_default_text"
                        android:textColor="@color/dark_gray"  />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn8_default_text"
                        android:textColor="@color/dark_gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnContainer3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_background"
                        android:text="@string/btn9_default_text"
                        android:textColor="@color/dark_gray" />

                    <Button
                        android:id="@+id/btn10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn10_default_text"
                        android:textColor="@color/dark_gray" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nextBtnContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/next"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1375172801279152/5295947029"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Toss"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>