<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".playActivity">

    <LinearLayout
        android:id="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/eventContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/differenceContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ballsPlayedContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playerBallsPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/balls_played_default_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/compballsPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/balls_played_default_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scoreContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playerScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/player_score_default_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/compScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/computer_score_default_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/eventTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:text="@string/event_view_default_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64">

            <LinearLayout
                android:id="@+id/playBtnContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btnContainer1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/one"
                        android:foreground="@drawable/one"
                        android:text="@string/btn1_default_text" />

                    <Button
                        android:id="@+id/btn2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/two"
                        android:foreground="@drawable/two"
                        android:text="@string/btn2_default_text" />

                    <Button
                        android:id="@+id/btn3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/three"
                        android:foreground="@drawable/three"
                        android:text="@string/btn3_default_text"
                        tools:ignore="VisualLintButtonSize" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnContainer2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/four"
                        android:foreground="@drawable/four"
                        android:text="@string/btn4_default_text"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/five"
                        android:foreground="@drawable/five"
                        android:text="@string/btn5_default_text"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/six"
                        android:foreground="@drawable/six"
                        android:text="@string/btn6_default_text"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnContainer3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn10"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/ten"
                        android:foreground="@drawable/ten"
                        android:text="@string/btn10_default_text"
                        android:translationX="155dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/restart"
                tools:ignore="InefficientWeight" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1375172801279152/5784738472"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>